--- a/SalesWebMVC/Views/Sellers/Detail.cshtml
+++ b/SalesWebMVC/Views/Sellers/Detail.cshtml
@@ -1,12 +1,10 @@
 ﻿@model SalesWebMVC.Models.Seller
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Detail";
 }
 
 <h2>@ViewData["Title"]</h2>
-
-<h3>Are your sure you want to dele this?</h3>
 
 <div>
     <h4>Seller</h4>
@@ -20,10 +18,11 @@
         <dd>@Html.DisplayFor(model => model.BirthDate)</dd>
         <dt>@Html.DisplayNameFor(model => model.BaseSalary)</dt>
         <dd>@Html.DisplayFor(model => model.BaseSalary)</dd>
+        <dt>@Html.DisplayNameFor(model => model.Department)</dt>
+        <dd>@Html.DisplayFor(model => model.Department.Name)</dd>
     </dl>
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id"/>
-        <input type="submit" value="Delete" class="btn btn-danger"/>
-        <a asp-action="Index">Back to List</a>
-    </form>
+</div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-default">Edit</a>
+    <a asp-action="Index">Back to list</a>
 </div>
